--- a/styles/new.css
+++ b/styles/new.css
@@ -218,6 +218,7 @@ body.initialized {
 }
 
 .screen__body {
+    overflow: visible;
     display: flex;
     flex-direction: column;
     justify-content: center
@@ -676,6 +677,7 @@ body.initialized {
 }
 
 .steps__body {
+    /* background-color: aqua; */
     display: flex;
     position: sticky;
     top: 15%
@@ -831,14 +833,15 @@ body.initialized {
 }
 
 .steps__canvas-container {
-    margin-top: 10%;
-
     width: 100%;
     height: 100%;
-    left: 24.px;
-    overflow: hidden;
+    /* left: 2%; */
+    top: 0;
+    bottom: 0;
+    overflow: visible;
     position: absolute;
     z-index: -1;
+    /* background-color: #630404; */
 }
 
 .steps__canvas-container::before {
