--- a/styles/new.css
+++ b/styles/new.css
@@ -584,6 +584,7 @@ body.initialized {
         height: 100%;
         padding-bottom: 10rem;
         position: relative
+        
     }
 }
 
@@ -607,6 +608,7 @@ body.initialized {
     position: absolute;
     bottom: -5rem;
     right: 20rem;
+    background-color: transparent;
     text-shadow: rgb(255, 255, 255) 1px 0 10px;
     transform: translateY(100%)
     
@@ -618,50 +620,70 @@ body.initialized {
         right: initial;
         bottom: initial;
         font-size: 1.6rem;
-        transform: initial
+        transform: initial;
+        text-shadow: rgb(255, 255, 255) 1px 0 10px;
+        background-color: transparent;
+        
     }
 }
 
 .welcome__canvas-container {
-    /* width: 700px;
-    height: 700px; */
-    width: 100%;
-    /* background-color: #838383; */
+    /* background-color: #890a0a; */
     position: absolute;
-
     z-index: -1;
-    right: 0;
+    left: 0;
     top: 0;
-    transform: translate(20%, -20%)
+    width: 100%;
+    height: 100%;
+    text-align: end;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 2em;
+    /* overflow: hidden; */
 }
 
-.welcome__canvas-container canvas {
-    position: relative;
-    z-index: -1
+@media screen and (max-width: 940px) {
+    .welcome__canvas-container {
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
 }
+
+.welcome__video-container{
+    width: 80em;
+    height: 80em;
+    top: 0;
+    /* background-color: #163abe; */
+}
+@media screen and (max-width: 940px) {
+    .welcome__video-container {
+    width: 60em;
+    height: 60em;
+    position: relative;
+    top: 0;
+    /* right: 0; */
+    /* float: right; */
+        /* transform: translate(-50%, 0) */
+    }
+}
+
 
 .welcome__canvas-container::before {
     content: "";
-    display: block;
+    /* display: block; */
     position: absolute;
     bottom: 0;
-    height: 10%;
+    height: 20%;
     width: 100%;
+    text-align: end;
     /* box-shadow: 0 0 50px 80px #fff; */
     /* background-color: #fff; */
     z-index: 2
-}
-/* and (max-width: 940px) */
-@media screen  {
-    .welcome__canvas-container {
-        top: initial;
-        right: initial;
-        /* left: 50%; */
-        bottom: 0;
-        width: 38rem;
-        height: 38rem;
-        /* transform: translate(-50%, 0) */
-    }
 }
 
 .steps .screen__body {
