--- a/styles/new.css
+++ b/styles/new.css
@@ -666,6 +666,18 @@ body.initialized {
     height: 60em;
     position: relative;
     top: 0;
+    right: 0;
+    float: right;
+        transform: translate(-50%, 0)
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .welcome__video-container {
+    width: 25m;
+    height: 25em;
+    position: relative;
+    top: 0;
     /* right: 0; */
     /* float: right; */
         /* transform: translate(-50%, 0) */
