--- a/styles/new.css
+++ b/styles/new.css
@@ -844,57 +844,46 @@ body.initialized {
     font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: .5rem;
-    color: #838383
+    color: #838383;
+    text-shadow: rgb(102, 102, 102) 1px 0 10px;
+
 }
 
 @media screen and (max-width: 640px) {
     .steps__question-h {
-        font-size: 1.3rem
+        font-size: 1.3rem;
+        text-shadow: rgb(102, 102, 102) 1px 0 10px;
     }
 }
 
 .steps__question-content {
     font-size: 1.7rem;
     font-weight: 400;
-    line-height: 1.2
+    line-height: 1.2;
+    text-shadow: rgb(102, 102, 102) 1px 0 10px;
 }
 
 @media screen and (max-width: 640px) {
     .steps__question-content {
-        font-size: 1.4rem
+        font-size: 1.4rem;
+        text-shadow: rgb(102, 102, 102) 1px 0 10px;
     }
 }
 
 .steps__canvas-container {
     width: 100%;
     height: 100%;
-    /* left: 2%; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
     top: 0;
-    bottom: 0;
     overflow: visible;
     position: absolute;
     z-index: -1;
+    /* flex: content; */
     /* background-color: #630404; */
 }
-
-.steps__canvas-container::before {
-    content: "";
-    display: block;
-    padding-top: 90%
-}
-
-.steps__canvas-container canvas {
-    position: absolute;
-    left: 0;
-    top: 0
-}
-
-@media screen and (max-width: 940px) {
-    .steps__canvas-container canvas {
-        transform: translateX(50%)
-    }
-}
-
+/*  _____________________________________ */
 .steps__canvas-container::before {
     content: "";
     display: block;
@@ -903,9 +892,30 @@ body.initialized {
 
 @media screen and (max-width: 940px) {
     .steps__canvas-container {
-        width: 80%;
-        overflow: hidden
+        /* width: 80%; */
+        /* overflow: hidden; */
+        
+        /* position: relative; */
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+}
+
+.steps_graphic-container{
+    width: 80%;
+    height: 650;
+    top: 0;
+    /* background-color: #163abe; */
+}
+@media screen and (max-width: 940px) {
+    .steps_graphic-container{
+        width: 100%;
+        height: 650;
+        position: absolute;
+    }
+
 }
 
 .inwork__slider {
