--- a/styles/new.css
+++ b/styles/new.css
@@ -844,15 +844,18 @@ body.initialized {
     font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: .5rem;
-    color: #838383;
-    text-shadow: rgb(102, 102, 102) 1px 0 10px;
+    color: #565656;
+    /* text-shadow: rgb(102, 102, 102) 1px 0 10px; */
 
 }
 
 @media screen and (max-width: 640px) {
     .steps__question-h {
+        margin-top: 2rem;
         font-size: 1.3rem;
-        text-shadow: rgb(102, 102, 102) 1px 0 10px;
+        float: left;
+        background-color: #ffffffaa ;
+        /* text-shadow: rgb(102, 102, 102) 1px 0 10px; */
     }
 }
 
@@ -860,13 +863,15 @@ body.initialized {
     font-size: 1.7rem;
     font-weight: 400;
     line-height: 1.2;
-    text-shadow: rgb(102, 102, 102) 1px 0 10px;
+    /* text-shadow: rgb(102, 102, 102) 1px 0 10px; */
 }
 
 @media screen and (max-width: 640px) {
     .steps__question-content {
         font-size: 1.4rem;
-        text-shadow: rgb(102, 102, 102) 1px 0 10px;
+        background-color: #ffffffaa ;
+        float: left;
+        /* text-shadow: rgb(102, 102, 102) 1px 0 10px; */
     }
 }
 
