--- a/tests/build_p2_dnd_3/fonts/fonts.css
+++ b/tests/build_p2_dnd_3/fonts/fonts.css
@@ -14,7 +14,7 @@
 
 @font-face {
   font-family: 'Italic';
-  src: url('Rosatom-Italic.woff') format('woff');
+  src: url('GPN_DIN-Italic.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
